--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox==3.24.3 semantic-version
+          pip install -r requirements_test.txt
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
       - name: Test library version
