--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,9 @@ jobs:
         with:
           python-version: 3.5
       - name: Install Python dependencies
-        run: pip install black
-        run: pip install -r requirements_test.txt
+        run: |
+          pip install black
+          pip install -r requirements_test.txt
 
       - name: Run Flake8
         run: |
