--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,13 @@
 [tox]
 envlist =
-    {py36,py39}-django-32
+    {py35}-django-{22}
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/tahoe_auth0
 commands = coverage run --source tahoe_auth0 runtests.py
 deps =
-    django-32: Django==3.2.7
+    django-22: Django>=2.2
     -r{toxinidir}/requirements_test.txt
 basepython =
-    py36: python3.6
-    py39: python3.9
+    py35: python3.5
