--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
 envlist =
-    {py35}-django-{22}
+    {py35}-django{22}
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/tahoe_auth0
 commands = coverage run --source tahoe_auth0 runtests.py
 deps =
-    django-22: Django>=2.2
+    django22: Django>=2.2
     -r{toxinidir}/requirements_test.txt
 basepython =
     py35: python3.5
