--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,7 @@ skipsdist = True
 
 [testenv]
 deps =
-    django22: -r requirements/django22.txt
-    django31: -r requirements/django31.txt
-    django32: -r requirements/django32.txt
+    django22: Django>=2.2
     -r requirements/test.txt
 
 commands=
