--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skipsdist = True
 [testenv]
 deps =
     django22: Django>=2.2
-    -r requirements/test.txt
+    -r requirements.txt
 
 commands=
   pytest
