--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,11 @@ skipsdist = True
 [testenv]
 deps =
     django22: Django>=2.2
-    -r requirements/test.txt
+    -r{toxinidir}/requirements.txt
+    httpretty
+    pytest-django
+    unittest2
+    ddt
 
 commands=
   pytest
