--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,12 @@ skipsdist = True
 [testenv]
 deps =
     django22: Django>=2.2
-    -r requirements.txt
+    -e git+https://github.com/python-social-auth/social-app-django.git@c00d23c2b45c3317bd35b15ad1b959338689cef8#egg=social-auth-app-django
+    httpretty
+    pytest-django
+    python-jose==3.2.0
+    social-auth-app-django
+    unittest2
 
 commands=
   pytest
