add bandit security tests

--- a/tox.ini
+++ b/tox.ini
@@ -13,3 +13,9 @@ deps =
 
 commands=
   pytest
+
+[testenv:bandit]
+deps =
+    bandit==1.7.1
+commands =
+    bandit -c bandit.yaml -r apps openedx tahoe_auth0 config
