bandit in tox.ini: remove non-existent `apps` directory

--- a/tox.ini
+++ b/tox.ini
@@ -18,4 +18,4 @@ commands=
 deps =
     bandit==1.7.1
 commands =
-    bandit -c bandit.yaml -r apps openedx tahoe_auth0 config
+    bandit -c bandit.yaml -r openedx tahoe_auth0 config
