--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,8 @@
 # see: https://appsembler.atlassian.net/wiki/spaces/ED/pages/2227503161/CODEOWNERS
 
+
+# Code onwer
 * @omarithawi
+
+# Default reviewers
+* @omarithawi @estherjsuh @melvinsoft @thraxil @shadinaif
