chore: run bandit via tox and prep for koa
 - refactored and simplified github's tests.yml
 - run on `main` pushed and all pull requests
 - require python3 for flake8 and bandit

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,9 @@
 [tox]
-envlist = py{35,38,39}-django{22,31,32},bandit
+envlist = py{35,38,39}-django{22,31,32},py3-{bandit,flake8}
 skipsdist = True
+
+[flake8]
+max-line-length = 120
 
 [testenv]
 deps =
@@ -14,8 +17,14 @@ deps =
 commands=
   pytest {posargs:}
 
-[testenv:bandit]
+[testenv:py3-flake8]
+deps =
+    flake8
+commands =
+    flake8 tahoe_auth0 --statistics
+
+[testenv:py3-bandit]
 deps =
     bandit==1.7.1
 commands =
-    bandit -c bandit.yaml -r openedx tahoe_auth0 config
+    bandit -c bandit.yaml -r tahoe_auth0 setup.py
