--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,35 +1,40 @@
 name: CI
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
 
 jobs:
   test:
-    name: Python ${{ matrix.python-version }} - Django ${{ matrix.django-version }}
+    name: ${{ matrix.name }} ${{ matrix.tox-env }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         include:
-          - python-version: 3.5
-            django-version: 2.2
+          - name: bandit
+            python-version: 3.5
+            tox-env: py3-bandit
+          - name: flake8
+            python-version: 3.5
+            tox-env: py3-flake8
+          - name: Juniper
+            python-version: 3.5
+            tox-env: py35-django22
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
-          django-version: ${{ matrix.django-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install tox flake8 tox semantic-version pre-commit pyjwkest
-      - name: Display Python version
+          pip install tox semantic-version pre-commit
+      - name: Display Python version for ${{ matrix.name }}
         run: python -c "import sys; print(sys.version)"
       - name: Test library version
         run: python -c "from tahoe_auth0 import __version__; from semantic_version import Version; Version(__version__)"
-      - name: Lint with flake8
-        run: flake8 tahoe_auth0 --statistics
       - name: Test with tox
         run: |
-          runenv=$(echo "${{ matrix.python-version }}" | sed 's/\([2-3]\)\.\([0-9]\)/py\1\2/')
-          djangoenv=$(echo "${{ matrix.django-version }}" | sed 's/\([2-3]\)\.\([0-9]\)/django\1\2/')
-          tox -e $runenv-$djangoenv
+          tox -e ${{ matrix.tox-env }}
