--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,8 @@ max-line-length = 120
 
 [testenv]
 deps =
-    django22: Django>=2.2
+    django22: Django>=2.2,<2.3
     -r{toxinidir}/requirements.txt
-    httpretty
-    pytest-django
-    unittest2
-    ddt
 
 commands=
   pytest {posargs:}
