--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv
 
 [isort]
 line_length = 120
-known_first_party = tahoe_auth0,config
+known_first_party = tahoe_idp,config
 multi_line_output = 3
 default_section = THIRDPARTY
 skip = venv/
@@ -34,7 +34,7 @@ django_settings_module = config.settings
 ignore_errors = True
 
 [coverage:run]
-include = tahoe_auth0/*
+include = tahoe_idp/*
 omit = *migrations*, *tests*
 plugins =
     django_coverage_plugin
