--- a/tox.ini
+++ b/tox.ini
@@ -17,10 +17,10 @@ commands=
 deps =
     flake8
 commands =
-    flake8 tahoe_auth0 --statistics
+    flake8 tahoe_idp --statistics
 
 [testenv:py3-bandit]
 deps =
     bandit==1.7.1
 commands =
-    bandit -c bandit.yaml -r tahoe_auth0 setup.py
+    bandit -c bandit.yaml -r tahoe_idp setup.py
