--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Display Python version for ${{ matrix.name }}
         run: python -c "import sys; print(sys.version)"
       - name: Test library version
-        run: python -c "from tahoe_auth0 import __version__; from semantic_version import Version; Version(__version__)"
+        run: python -c "from tahoe_idp import __version__; from semantic_version import Version; Version(__version__)"
       - name: Test with tox
         run: |
           tox -e ${{ matrix.tox-env }}
