--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = config.settings
-addopts = --cov tahoe_auth0 --cov-report term-missing --cov-report html
+addopts = --cov tahoe_idp --cov-report term-missing --cov-report html
