--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ site-configuration-client==0.1.4
 social-auth-app-django==3.3.0 ; python_version <= "3.5"
 python-jose==3.2.0 ; python_version <= "3.5"
 requests==2.23.0 ; python_version <= "3.5"
+rsa==4.7.2 ; python_version <= "3.5"
 
 # Open edX requirements: Koa
 social-auth-app-django==4.0.0 ; python_version >= "3.8"
