--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,11 @@ skipsdist = True
 max-line-length = 120
 
 [testenv]
+download = True
+
+setenv =
+    TAHOE_SITES_USE_ORGS_MODELS = False
+
 deps =
     django22: Django>=2.2,<2.3
     -r{toxinidir}/requirements.txt
