Copy model from magiclink and make migrations

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ skipsdist = True
 max-line-length = 120
 
 [testenv]
+download = True
+
 deps =
     django22: Django>=2.2,<2.3
     -r{toxinidir}/requirements.txt
