--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,16 @@
 
 # Open edX requirements: all releases
 site-configuration-client==0.1.4
+fusionauth-client==1.36.0
 
 # Open edX requirements: Juniper
+django==2.2.23 ; python_version <= "3.5"
 social-auth-app-django==3.3.0 ; python_version <= "3.5"
-python-jose==3.2.0 ; python_version <= "3.5"
 requests==2.23.0 ; python_version <= "3.5"
 
 # Open edX requirements: Koa
+django==2.2.23 ; python_version >= "3.8"
 social-auth-app-django==4.0.0 ; python_version >= "3.8"
-python-jose==3.3.0 ; python_version >= "3.8"
 requests==2.25.0 ; python_version >= "3.8"
 
 # Test requirements
