remove esther from CODEOWNERS

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,4 +5,4 @@
 * @omarithawi
 
 # Default reviewers
-* @omarithawi @estherjsuh @melvinsoft @thraxil @shadinaif
+* @omarithawi @melvinsoft @thraxil @shadinaif
