--- a/requirements.txt
+++ b/requirements.txt
@@ -9,15 +9,16 @@ fusionauth-client==1.36.0
 django==2.2.28 ; python_version <= "3.5"
 social-auth-app-django==3.3.0 ; python_version <= "3.5"
 requests==2.23.0 ; python_version <= "3.5"
+django-coverage-plugin<3.0.0 ; python_version <= "3.5"
 
 # Open edX requirements: Koa
 django==2.2.23 ; python_version >= "3.8"
 social-auth-app-django==4.0.0 ; python_version >= "3.8"
 requests==2.25.0 ; python_version >= "3.8"
+django-coverage-plugin>=3.0.0 ; python_version >= "3.8"
 
 # Test requirements
 # Those may break, when they do, pin them.
-django-coverage-plugin
 requests-mock
 httpretty
 pytest
